--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Book settings
 # Learn more at https://jupyterbook.org/customize/config.html
 
-title: My sample book
-author: The Jupyter Book Community
+title: FSR. Machine learning.
+author: Belyakcoff N., Pepa R.  
 logo: FSRlogo.jpg
 
 # Force re-execution of notebooks on each build.
